src/test/ui/span/issue-23338-locals-die-before-temps-of-body.nll.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/issue-23338-locals-die-before-temps-of-body.rs:20:5
   |
LL |     y.borrow().clone()
   |     ^---------
   |     |
   |     borrowed value does not live long enough
   |     borrow may end up in a temporary, created here
LL | }
   | -
   | |
   | borrowed value only lives until here
   | temporary later dropped here, potentially using the reference

error[E0597]: `y` does not live long enough
  --> $DIR/issue-23338-locals-die-before-temps-of-body.rs:27:9
   |
LL |         y.borrow().clone()
   |         ^---------
   |         |
   |         borrowed value does not live long enough
   |         borrow may end up in a temporary, created here
LL |     };
   |     -- temporary later dropped here, potentially using the reference
   |     |
   |     borrowed value only lives until here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
